Add deactivate button to meal plan
